--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
             - name: Set up Go
               uses: actions/setup-go@v5
               with:
-                  go-version: "1.23"
+                  go-version: "1.22"
 
             - name: Install dependencies
               run: go mod download
@@ -28,13 +28,17 @@ jobs:
             - name: Run tests
               run: go test -v ./...
 
-            - name: Run lint
-              uses: golangci/golangci-lint-action@v4
-              with:
-                  version: v1.55.2
-
             - name: Check go.mod/go.sum tidy
               run: go mod tidy && git diff --exit-code go.mod go.sum
+
+            - name: Check formatting (gofmt)
+              run: |
+                  output=$(gofmt -l .)
+                  if [ -n "$output" ]; then
+                    echo "Files not formatted:"
+                    echo "$output"
+                    exit 1
+                  fi
 
             - name: Upload test coverage
               run: |
