--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,3 +51,11 @@ jobs:
               with:
                   name: coverage-report
                   path: coverage.out
+
+            - name: Run lint
+              uses: golangci/golangci-lint-action@v4
+              with:
+                  version: v1.55.2
+
+            - name: Run Makefile linter target
+              run: make lint
